fix alignment

--- a/src/index.css
+++ b/src/index.css
@@ -451,7 +451,7 @@
 }
 
 .projectDetailModal .cds--modal-content {
-  padding-left: 0;
+  /* padding-left: 0; */
 }
 
 .projectDetailCol {
